Add port arg, signal handler and add prom_exporter bind

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ clap-verbosity-flag = "2.0.0"
 env_logger = "0.9"
 log = "0.4"
 monitord = "0.3.0"
+prometheus_exporter = "0.8.4"
+signal-hook = "0.3.14"
