--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ log = "0.4"
 monitord = "0.3.0"
 prometheus_exporter = "0.8.4"
 signal-hook = "0.3.14"
+
+[profile]
+release = { strip = "symbols", lto = "thin", opt-level = "z" }
