--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
 name = "monitord-exporter"
 version = "0.1.0"
+authors = ["Cooper Ry Lees <me@cooperlees.com>"]
+license = "GPL-2.0-or-later"
+readme = "README.md"
+repository = "https://github.com/cooperlees/monitord-exporter"
 edition = "2021"
+description = """
+monitord-exporter ... let prometheus know how happy your systemd is! 😊
+"""
+categories = ["network-programming", "os::linux-apis"]
 
 [dependencies]
 anyhow = "1.0"
