--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "monitord-exporter"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Cooper Ry Lees <me@cooperlees.com>"]
 license = "GPL-2.0-or-later"
 readme = "README.md"
@@ -14,12 +14,13 @@ categories = ["network-programming", "os::linux-apis"]
 [dependencies]
 anyhow = "1.0"
 clap = { version = "4.2", features = ["derive"] }
-clap-verbosity-flag = "2.0"
-env_logger = "0.10"
-log = "0.4"
-monitord = "0.4.1"
+monitord = "0.5.0"
 prometheus_exporter = "0.8.4"
 signal-hook = "0.3.14"
+tracing = "0.1"
+tracing-core = "0.1"
+tracing-glog = "0.3"
+tracing-subscriber = "0.3"
 
 [profile]
 release = { strip = "symbols", lto = "thin", opt-level = "z" }
