Make compile + work - Fix bug with no using labels correct for service stats

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["network-programming", "os::linux-apis"]
 [dependencies]
 anyhow = "1.0"
 clap = { version = "4.2", features = ["derive"] }
+indexmap = "2.1.0"
 monitord = "0.8.2"
 prometheus_exporter = "0.8.4"
 signal-hook = "0.3.14"
