Move systemd unit to use network-online.target to be more correct waiting for network to come up

--- a/monitord-exporter.service
+++ b/monitord-exporter.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=monitord-exporter ... Tell prometheus how your systemd is!
-After=network.target
+After=network-online.target
 
 [Service]
 User=nobody
