--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ categories = ["network-programming", "os::linux-apis"]
 [dependencies]
 anyhow = "1.0"
 clap = { version = "4.5", features = ["derive"] }
-monitord = "0.12.0"
+monitord = "0.12"
 prometheus_exporter = "0.8"
 signal-hook = "0.3.17"
-tokio = { version = "1.40.0", feature = ["all"] }
+tokio = { version = "1.41.0", feature = ["fs", "rt", "rt-multi-thread", "macros", "tracing", "time", "sync"] }
 tracing = "0.1"
 tracing-core = "0.1"
 tracing-glog = "0.4"
